feat(swagger,client): modificateur mineur des message d'erreur du client, ajout de la definition swagger de la route /client/pokedex/pokemons
